samples/_failures_safe/1761371981_810198_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1515d64.c: In function ‘main’:
./samples/SAFE/__tmp_c1515d64.c:172:15: error: expected ‘;’ at end of input
  172 |         buffer
      |               ^
      |               ;
./samples/SAFE/__tmp_c1515d64.c:172:9: error: expected declaration or statement at end of input
  172 |         buffer
      |         ^~~~~~
./samples/SAFE/__tmp_c1515d64.c:172:9: error: expected declaration or statement at end of input
